Tried to add dist/output.css to gitignore, removed name from resume

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "tailwindcss": "^3.4.15"
   },
   "scripts": {
-    "dev": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+    "dev": "npx tailwindcss -i ./src/input.css -o ./dist/output.css"
+  },
+  "comments": {
+    "scripts" : "Add '--watch' to end of scripts/dev to hot reload changes."
   }
 }
